# ApertusVR

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  prepare_android.cmake  prepare_cmake.cmake  prepare_cxx.cmake  setup.bat
core/coreConfig/: CMakeLists.txt  apeAndroidAssetOpen.h  apeCoreConfigImpl.cpp  apeCoreConfigImpl.h
core/eventManager/: ApeEventManagerImpl.cpp  ApeEventManagerImpl.h  CMakeLists.txt  apeEventManagerImpl.cpp  apeEventManagerImpl.h
core/jsAPI/: CMakeLists.txt
core/mainWindow/: ApeMainWindowImpl.cpp  ApeMainWindowImpl.h  CMakeLists.txt
core/pluginManager/: ApeInternalPluginManager.cpp  ApeInternalPluginManager.h  ApePluginAPI.cpp  ApePluginFactory.cpp  ApePluginFactory.h  ApePluginInstance.cpp  ApePluginInstance.h  ApePluginManagerImpl.cpp  ApePluginManagerImpl.h  CMakeLists.txt  apeInternalPluginManager.cpp  apePluginFactory.cpp  apePluginManagerImpl.cpp  apePluginManagerImpl.h
core/sceneManager/: ApeBoxGeometryImpl.cpp  ApeBoxGeometryImpl.h  ApeBrowserImpl.cpp  ApeBrowserImpl.h  ApeCameraImpl.cpp  ApeCameraImpl.h  ApeCloneGeometryImpl.cpp  ApeCloneGeometryImpl.h  ApeConeGeometryImpl.cpp  ApeConeGeometryImpl.h  ApeCylinderGeometryImpl.cpp  ApeCylinderGeometryImpl.h  ApeFileGeometryImpl.cpp  ApeFileGeometryImpl.h  ApeFileMaterialImpl.cpp  ApeFileMaterialImpl.h  ApeFileTextureImpl.cpp  ApeFileTextureImpl.h  ApeIndexedFaceSetGeometryImpl.cpp  ApeIndexedFaceSetGeometryImpl.h  ApeIndexedLineSetGeometryImpl.cpp  ApeIndexedLineSetGeometryImpl.h  ApeLightImpl.cpp  ApeLightImpl.h  ApeManualMaterialImpl.cpp  ApeManualMaterialImpl.h  ApeManualPassImpl.cpp  ApeManualPassImpl.h  ApeManualTextureImpl.cpp  ApeManualTextureImpl.h  ApeNodeImpl.cpp  ApeNodeImpl.h  ApePbsPassImpl.cpp  ApePbsPassImpl.h  ApePlaneGeometryImpl.cpp  ApePlaneGeometryImpl.h  ApePointCloudImpl.cpp  ApePointCloudImpl.h  ApeRayGeometryImpl.cpp  ApeRayGeometryImpl.h  (+75 more)
core/system/: ApeSystem.cpp  CMakeLists.txt  apeSystem.cpp
plugins/: CMakeLists.txt  apeVLFTCoreConfig.h
plugins/00_skeletonForApertusPluginDevelopment/: ApeMyPlugin.cpp  ApeMyPlugin.h  CMakeLists.txt
plugins/360Image/: Ape360ImagePlugin.cpp  Ape360ImagePlugin.h  CMakeLists.txt
plugins/360ImageScene/: Ape360ImagePlugin.h  CMakeLists.txt
plugins/360StereoImage/: Ape360StereoImagePlugin.cpp  Ape360StereoImagePlugin.h  CMakeLists.txt
plugins/360StereoImageScene/: Ape360StereoImagePlugin.cpp  CMakeLists.txt
plugins/360Video/: Ape360VideoPlugin.cpp  Ape360VideoPlugin.h  CMakeLists.txt
plugins/360VideoSample/: Ape360VideoSamplePlugin.cpp  Ape360VideoSamplePlugin.h  CMakeLists.txt
plugins/360VideoScene/: Ape360VideoPlugin.h  CMakeLists.txt
plugins/androidSampleScene/: apeAndroidSampleScenePlugin.cpp
plugins/artScene/: ApeArtScenePlugin.cpp  ApeArtScenePlugin.h  CMakeLists.txt
plugins/assetImporter/: CMakeLists.txt
plugins/assimpAssetLoader/: ApeAssimpAssetLoaderPlugin.cpp  ApeAssimpAssetLoaderPlugin.h  CMakeLists.txt
plugins/audi/: ApeAudiPlugin.cpp  ApeAudiPlugin.h  CMakeLists.txt
plugins/avatar/: ApeAvatarPlugin.cpp  ApeAvatarPlugin.h  CMakeLists.txt
plugins/browser/: CMakeLists.txt
plugins/bulletPhysics/: CMakeLists.txt  apeBulletPhysicsPlugin.cpp  apeBulletPhysicsPlugin.h  bullet.tex
plugins/cefBrowser/: ApeCefBrowserPlugin.cpp  ApeCefBrowserPlugin.h  ApeCefClientImpl.cpp  ApeCefClientImpl.h  ApeCefKeyboardHandlerImpl.cpp  ApeCefKeyboardHandlerImpl.h  ApeCefLifeSpanHandlerImpl.cpp  ApeCefLifeSpanHandlerImpl.h  ApeCefRenderHandlerImpl.cpp  ApeCefRenderHandlerImpl.h  CMakeLists.txt
plugins/dolphinEnvironmentSimulator/: ApeDolphinEnvironmentSimulatorPlugin.cpp  ApeDolphinEnvironmentSimulatorPlugin.h  CMakeLists.txt
plugins/e-Learning/: CMakeLists.txt  apeELearningPlugin.cpp  apeELearningPlugin.h  apeELearningPluginConfig.h
plugins/engineeringScene/: ApeEngineeringScenePlugin.cpp  ApeEngineeringScenePlugin.h  CMakeLists.txt
plugins/filamentApplicationPlugin/: CMakeLists.txt  NativeWindowHelper.mm  apeFilamentApplicationPlugin.cpp  apeFilamentApplicationPlugin.cpp.orig  apeFilamentApplicationPlugin.h  apeFilamentApplicationPluginConfigs.h  apeVLFTAnimationPlayerPluginConfig.h  apeVLFTImgui.cpp  apeVLFTImgui.h
plugins/filamentSceneLoader/: CMakeLists.txt  apeFilamentSceneLoaderPlugin.cpp  apeFilamentSceneLoaderPlugin.h  apeFilamentSceneLoaderPluginConfig.h
plugins/fobHeadTracking/: ApeFobHeadTrackingPlugin.cpp  ApeFobHeadTrackingPlugin.h  ApeFobHeadTrackingPluginConfigs.h  CMakeLists.txt
plugins/gallerySample/: ApeGallerySamplePlugin.cpp  ApeGallerySamplePlugin.h  CMakeLists.txt
plugins/game/: CMakeLists.txt
plugins/gyor/: ApeGyorPlugin.cpp  ApeGyorPlugin.h  CMakeLists.txt
plugins/gyorPathPlanning/: ApeGyorPathPlanningPlugin.cpp  ApeGyorPathPlanningPlugin.h  CMakeLists.txt
plugins/helloWorld/: ApeHelloWorldPlugin.cpp  ApeHelloWorldPlugin.h  CMakeLists.txt
plugins/hmd/: CMakeLists.txt
plugins/htcVive/: ApeHtcVivePlugin.cpp  ApeHtcVivePlugin.h  CMakeLists.txt
plugins/htmlOverlayUI/: ApeHtmlOverlayUIPlugin.cpp  ApeHtmlOverlayUIPlugin.h  CMakeLists.txt
plugins/htmlOverlayUiManager/: CMakeLists.txt  apehtmlOverlayUiManagerPlugin.cpp  apehtmlOverlayUiManagerPlugin.h
plugins/inGameBrowserSample/: ApeInGameBrowserSamplePlugin.cpp  ApeInGameBrowserSamplePlugin.h  CMakeLists.txt
plugins/inGameBrowserScene/: ApeInGameBrowserSamplePlugin.h
plugins/industry40/: ApeIndustry40Plugin.cpp  ApeIndustry40Plugin.h  CMakeLists.txt
plugins/jni/: CMakeLists.txt  apeJNICamera.cpp  apeJNICloneGeometry.cpp  apeJNIEntity.cpp  apeJNIFileGeometry.cpp  apeJNILight.cpp  apeJNINode.cpp  apeJNIPlaneGeometry.cpp  apeJNIPlugin.cpp  apeJNIPlugin.h  apeJNISceneManager.cpp  apeJNISceneNetwork.cpp  apeJNITextGeometry.cpp
plugins/jsAPI/: CMakeLists.txt
plugins/kinect/: ApeKinectPlugin.cpp  ApeKinectPlugin.h  CMakeLists.txt
plugins/kinectHeadTracking/: ApeKinectHeadTrackingPlugin.cpp  ApeKinectHeadTrackingPlugin.h  CMakeLists.txt
plugins/languageAPI/: CMakeLists.txt
plugins/leapMotion/: ApeKinectPlugin.cpp  ApeLeapMotionPlugin.cpp  (+2 more)
samples/: CMakeLists.txt  virtualLearningFactory.md5
(+3530 files in other folders)
